# parsePhotoV2

./: .gitignore  404.html  Cargo.toml  README.md  index.html  package-lock.json  package.json
archive/: old.ts
backend/: Cargo.toml
backend/src/: config.rs  init_db.rs
backend/src/links/: dto.rs  links_controller.rs  links_db_service.rs  links_service.rs  mod.rs
backend/src/mediafiles/: dto.rs  mediafiles_service.rs  mod.rs
backend/web/: asset-manifest.json  index.html
backend/web/static/js/: main.bcae6510.js  main.bcae6510.js.map
backend_node/: .eslintrc.js  Cargo.toml  build.rs  index.d.ts  index.node  package-lock.json  package.json  tsconfig.json
backend_node/napi/src/: lib.rs
backend_node/src/: app.module.ts  initDB.ts  main.ts
backend_node/src/entities/: common.ts  link.entity.ts  mediafiles.entity.ts
backend_node/src/helpers/: common.ts
backend_node/src/links/: links.controller.ts  links.db.service.ts  links.module.ts  links.service.ts
backend_node/src/mediafiles/: mediafiles.db.service.ts  mediafiles.module.ts  mediafiles.service.ts
backend_node/src/napi/: index.d.ts  index.node
frontend/: Cargo.toml  index.html  package-lock.json  package.json
frontend/src/: main.rs
frontend/src/components/: LinkModal.tsx  TableLinks.tsx  add_link.rs  mod.rs  notifications.rs
frontend/src/models/: common.ts  links.ts
frontend/src/services/: links.ts
frontend/src/states/: links.ts
frontend_js/: tsconfig.json
frontend_js/public/: index.html
frontend_js/src/: App.tsx  index.scss
frontend_js/src/components/: AddLink.tsx
frontend_js/src/helpers/: handlers.ts
frontend_js/src/services/: links.ts
src/: config.rs  init_db.rs  main.rs  utils.rs
src/links/: dto.rs  links_controller.rs  links_db_service.rs  links_service.rs  mod.rs
src/mediafiles/: mediafiles_controller.rs  mediafiles_db_service.rs  mediafiles_service.rs
