[package]
name = "parsePhoto"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-util = "0.7"
futures = "0.3"
html5ever = "0.27"
select = "0.5"
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
dotenvy = "0.15"
chrono = "0.4"
regex = "1.3.9"
once_cell = "1.17"
sha2 = "0.10.8"