[package]
name = "napi"
version = "0.1.0"
edition = "2021"

[dependencies]
napi = { version = "2.0", features = ["serde"] }
napi-derive = "2"
scraper = "0.12"

[lib]
name = "napi"
crate-type = ["cdylib"]
path = "napi/src/lib.rs"

[build-dependencies]
napi-build = "1"

[workspace]

[package.metadata.napi]
out-dir = "./src/napi"

[profile.release]
opt-level = 3  # Высокий уровень оптимизаций для минимизации кода
lto = true      # Включение Link Time Optimization (LTO) для дополнительной оптимизации
