[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
regex = "1.3.9"
log = "0.4"
wasm-logger = "0.2"
yew-hooks = "0.3.2"

[build-dependencies]
trunk = "0.21.4"

[package.metadata.trunk]
build_dir = "../web/"

[static]
dir = "static"
